# axiom-reflex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  plugin.json  settings.example.json
agents/: incident-scribe.md  outreach-researcher.md  pattern-consolidator.md  rayo-heartbeat-watcher.md  reply-check.md  verifier-adversarial.md
commands/: status.md
content/drafts/: founder-dms.md  github-batch.json
content/launch/: 01-hn-show-hn.md  02-devto-article.md  03-reddit-posts.md  04-twitter-linkedin.md  05-directories-listing.md  06-content-pipeline-week1.md  07-influencer-outreach.md  08-newsletter-pitches.md  09-extra-subreddits.md  10-discord-slack-targets.md
hooks/: posttooluse-scan-secrets.sh  precompact-state-dump.sh  pretooluse-gmail-dedup.sh  pretooluse-playwright-pattern.sh  sessionstart-heartbeat.sh  stop-daily-note-reminder.sh  subagentstop-summary.sh
mcp-servers/mem-refs/: README.md  pyproject.toml
mcp-servers/mem-refs/src/mem_refs/: __init__.py  server.py
skills/gmail-dedup-preflight/: SKILL.md
skills/gmail-reply-in-thread/: SKILL.md
skills/linkedin-identity-switcher/: SKILL.md
skills/playwright-safe-routing/: SKILL.md
skills/reddit-comment-tone/: SKILL.md
skills/twitter-thread-playwright/: SKILL.md
